# chessboard

./: .gitignore  CMakeLists.txt  README.md  WINDOWS_BUILD.md  build.sh  chessboard  chessboard_simple  main.cpp  main_simple.cpp  test_project.sh  verify_structure.sh
.cache/mesa_shader_cache/: index
.github/workflows/: build.yml  cmake-multi-platform.yml
src/: about_modal.cpp  about_modal.h  chess_game_logic.cpp  chess_game_logic.h  chess_pieces.h  chess_pieces_ncurses.cpp  chess_pieces_ncurses.h  chess_pieces_sdl.cpp  chess_pieces_sdl.h  chess_timer.cpp  chess_timer.h  chessboard_chars.cpp  chessboard_chars_engine.cpp  chessboard_chars_engine.h  chessboard_ncurses.cpp  chessboard_ncurses.h  chessboard_sdl.cpp  chessboard_sdl_fixed.cpp  chessboard_sdl_refactored.cpp  config_manager.cpp  config_manager.h  definitions.h  engine_test.cpp  engine_test_simple.cpp  game_state_manager.cpp  game_state_manager.h  gameinfo_modal.cpp  gameinfo_modal.h  gamestates_modal.cpp  gamestates_modal.h  help_modal.cpp  help_modal.h  main.cpp  modal_about.cpp  modal_base.cpp  modal_base.h  modal_help.cpp  modal_info.cpp  modal_info.h  modal_settings.cpp  (+7 more)
src/engine/: bitboard.cpp  bitboard.h  chess_engine.h  gnuchess_adapter.cpp  gnuchess_adapter.h  uci_engine.cpp  uci_engine.h
